Added image to banner

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
     <body>
         <header class="banner">
-            <h1>Spartan Ads</h1>
+            <h1 class="bannertext"><img class="bannericon" src=assets/spartan-head512x512.png>Spartan Ads</h1>
         </header>
         <main>
             <div>
                 <h3>Welcome to Spartan Ads!</h3>
-                <p>This is a place where you can add your personalized ads for clubs or for events that you would like to advertise .</P>
+                <p>This is a place where you can add your personalized ads for clubs or for events that you would like to advertise .</p>
             </div>
         </main>
         <footer>
