Displayed google sign in button differently

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Spartan Ads</title>
         <link href="index.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" href="assets/favicon.ico"/>
+        <script type="text/javascript" src="index.js"></script>
         <meta charset="UTF-8">
         <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
     </head>
@@ -13,8 +14,10 @@
         </header>
         <main>
             <div>
-                <h3>Welcome to Spartan Ads!</h3>
+                <h2>Welcome to Spartan Ads!</h2>
                 <p>This is a place where you can add your personalized ads for clubs or for events that you would like to advertise .</p>
+                <p>To contine, please sign in with your school Google account.</p>
+                <button class="SignInButton"></button>
             </div>
         </main>
         <footer>
