--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="index.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" href="assets/favicon.ico"/>
         <meta charset="UTF-8">
-        <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
+        <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada,Spartan Ads,Spartan">
         <meta name="google-signin-client_id" content="984249493046-2v52k72js4nfq6kr6pc4rl46dmf6r9hc.apps.googleusercontent.com">
         <script src="https://apis.google.com/js/platform.js" async defer></script>
         <script type="text/javascript" src="index.js"></script>
