--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div>
                 <h2>Welcome to Spartan Ads!</h2>
-                <p>This is a place where you can add your personalized ads for clubs or for events that you would like to advertise.</p>
+                <p>This is a place where you can pay to broadcast your personalized ads for clubs, events, campaigns, or any other school appropriate advertisement you can think of. These ads will go onto the LCHS GO app and most other LC iTeam projects.</p>
                 <p>To contine, please sign in with your school Google account.</p>
                 <div class="g-signin2" data-onsuccess="onSignIn"></div>
             </div>
