--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1 class="bannertext"><img class="bannericon" src=assets/LCHS_Mascot_FullColor.svg> Spartan Ads</h1>
         </header>
         <main>
-            <div>
+            <div class="content">
                 <h2>Welcome to Spartan Ads!</h2>
                 <p>This is a place where you can broadcast your personalized ads for clubs, events, campaigns, or any other school appropriate advertisement you can think of. However, you will need to make a donation to use this service in some circumstances. These ads will go onto the LCHS GO app and most other LC iTeam projects.</p>
                 <p>To continue, please sign in with your school Google account.</p>
