--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div class="content">
                 <h2>Welcome to Spartan Ads!</h2>
-                <p>TEST This is a place where you can broadcast your personalized ads for clubs, events, campaigns, or any other school appropriate advertisement you can think of. However, you will need to make a donation to use this service in some circumstances. These ads will go onto the LCHS GO app and most other LC iTeam projects.</p>
+                <p>This is a place where you can broadcast your personalized ads for clubs, events, campaigns, or any other school appropriate advertisement you can think of. However, you will need to make a donation to use this service in some circumstances. These ads will go onto the LCHS GO app and most other LC iTeam projects.</p>
                 <p>To continue, please sign in with your school Google account.</p>
                 <div class="g-signin2" data-onsuccess="onSignIn"></div>
             </div>
