--- a/welcome.html
+++ b/welcome.html
@@ -16,6 +16,7 @@
             <div class="content">
                 <h2>Welcome!</h2>
                 <p>By clicking a button you agree to something.</p>
+                <button>Ok</button>
             </div>
         </main>
         <footer>
