Added link to the terms of service page.

--- a/welcome.html
+++ b/welcome.html
@@ -15,7 +15,7 @@
         <main>
             <div class="content">
                 <h2>Welcome!</h2>
-                <p>By clicking a button you agree to something.</p>
+                <p>By clicking a button you agree to the <a href="terms-of-service.html">Terms of Service</a>.</p>
                 <button>Ok</button>
             </div>
         </main>
