Added button class and privacy policy link

--- a/welcome.html
+++ b/welcome.html
@@ -15,8 +15,8 @@
         <main>
             <div class="content">
                 <h2>Welcome!</h2>
-                <p>By clicking a button you agree to the <a href="terms-of-service.html">Terms of Service</a>.</p>
-                <button>Ok</button>
+                <p>By continuing you agree to the <a href="terms-of-service.html">terms of Service</a> and <a href="">privacy policy</a>.</p>
+                <button class="button">Ok</button>
             </div>
         </main>
         <footer>
