--- a/welcome.html
+++ b/welcome.html
@@ -16,7 +16,7 @@
             <div class="content">
                 <h2>Welcome!</h2>
                 <p>By continuing you agree to the <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
-                <button class="button">Ok</button>
+                <button class="genericBtn">Ok</button>
             </div>
         </main>
         <footer>
