--- a/welcome.html
+++ b/welcome.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="assets/favicon.ico"/>
         <meta charset="UTF-8">
         <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
+        <meta name="google-signin-client_id" content="984249493046-2v52k72js4nfq6kr6pc4rl46dmf6r9hc.apps.googleusercontent.com">
         <script type="text/javascript" src="welcome.js"></script>
     </head>
     <body>
