--- a/welcome.html
+++ b/welcome.html
@@ -17,7 +17,7 @@
         <main>
             <div class="content">
                 <h2>Welcome!</h2>
-                <p>By continuing you agree to the <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
+                <p>By continuing you agree to our <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
                 <button class="genericBtn"><strong> Ok </strong></button>
             </div>
         </main>
