--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
             <div class="content">
                 <h2>Welcome!</h2>
                 <p>By continuing you agree to our <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
-                <button class="genericBtn"><strong> Ok </strong></button>
+                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/club-or-personal-selection.html')"><strong> Ok </strong></button>
             </div>
         </main>
         <footer>
