Added new buttons

--- a/club-or-personal-selection.html
+++ b/club-or-personal-selection.html
@@ -16,7 +16,8 @@
             <div class="content">
                 <h2>How are you using Spartan Ads?</h2>
                 <p>Are you using Spartan Ads for a club or personal use?</p>
-                <button class="genericBtn"><strong> IDK </strong></button>
+                <button class="genericBtn"><strong> Club Use </strong></button>
+                <button class="genericBtn"><strong> Personal Use (Requires Donation) </strong></button>
             </div>
         </main>
         <footer>
