--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -27,7 +27,7 @@
                     <li>These terms constitute the entire agreement between LCHS iTeam and you in relation to your use of this Website, and supersede all prior agreements and understandings.</li>
                     <li>These terms will be governed by and interpreted in accordance with the laws of the United States of America, and you submit to the non-exclusive jurisdiction of the state and federal courts located in the United States of America for the resolution of any disputes.</li>
                 </ol>
-                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/welcome.html')"><strong> Ok </strong></button>
+                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/welcome.html')"><strong> Go Back </strong></button>
             </div>
         </main>
         <footer>
