--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,6 +15,7 @@
             <div class="content">
                 <h2>Privacy Policy</h2>
                 <p>You have none.</p>
+               <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/club-or-personal-selection.html')"><strong> Go Back </strong></button>
             </div>
         </main>
         <footer>
