--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,6 +3,7 @@
     <head>
         <title>Spartan Ads</title>
         <link href="terms-of-service.css" rel="stylesheet" type="text/css">
+        <link href="privacy-policy.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" href="assets/favicon.ico"/>
         <meta charset="UTF-8">
         <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
