--- a/club-or-personal-selection.html
+++ b/club-or-personal-selection.html
@@ -17,7 +17,7 @@
                 <h2>How are you using Spartan Ads?</h2>
                 <p>Are you using Spartan Ads for a club or personal use?</p>
                 <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/upgrade-or-create-ad.html?user=club')"><strong> Club Use </strong></button>
-                <button class="genericBtn"> onclick="window.location.replace('http://ads.lciteam.club/upgrade-or-create-ad.html?user=personal')"<strong> Personal Use (Requires Donation) </strong></button>
+                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/upgrade-or-create-ad.html?user=personal')"><strong> Personal Use (Requires Donation) </strong></button>
             </div>
         </main>
         <footer>
