--- a/upgrade-or-create-ad.html
+++ b/upgrade-or-create-ad.html
@@ -14,8 +14,8 @@
         </header>
         <main>
             <div class="content">
-                <h2>How are you using Spartan Ads?</h2>
-                <p>Are you using Spartan Ads for a club or personal use?</p>
+                <h2>Why are you using Spartan Ads?</h2>
+                <p>Are you using Spartan Ads to create a new ad or to upgrade an existing ad?</p>
                 <button class="genericBtn"><strong> Create New Ad </strong></button>
                 <button class="genericBtn"><strong> Upgrade Existing Ad (Requires Donation) </strong></button>
             </div>
