Add link to create-ad.html

--- a/upgrade-or-create-ad.html
+++ b/upgrade-or-create-ad.html
@@ -16,7 +16,7 @@
             <div class="content">
                 <h2>Why are you using Spartan Ads?</h2>
                 <p>Are you using Spartan Ads to create a new ad or to upgrade an existing ad?</p>
-                <button class="genericBtn"><strong> Create New Ad </strong></button>
+                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/create-ad.html')><strong> Create New Ad </strong></button>
                 <button class="genericBtn"><strong> Upgrade Existing Ad (Requires Donation) </strong></button>
             </div>
         </main>
