--- a/upgrade-or-create-ad.html
+++ b/upgrade-or-create-ad.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="assets/favicon.ico"/>
         <meta charset="UTF-8">
         <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
-        <script type="text/javascript" src="welcome.js"></script>
+        <script type="text/javascript" src="upgrade-or-create-ad.js"></script>
     </head>
     <body>
         <header class="banner">
