--- a/create-ad.html
+++ b/create-ad.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Spartan Ads</title>
+        <link href="welcome.css" rel="stylesheet" type="text/css">
+        <link rel="shortcut icon" href="assets/favicon.ico"/>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
+        <meta name="google-signin-client_id" content="984249493046-2v52k72js4nfq6kr6pc4rl46dmf6r9hc.apps.googleusercontent.com">
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <script type="text/javascript" src="create0ad.js"></script>
+    </head>
+    <body>
+        <header class="banner">
+            <h1 class="bannertext"><img class="bannericon" src=assets/LCHS_Mascot_FullColor.svg> Spartan Ads</h1>
+        </header>
+        <main>
+            <div class="content">
+                <h2>Welcome!</h2>
+                <p>By continuing you agree to our <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
+                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/club-or-personal-selection.html')"><strong> Ok </strong></button>
+            </div>
+        </main>
+        <footer>
+        </footer>
+    </body>
+</html>
