--- a/create-ad.html
+++ b/create-ad.html
@@ -16,9 +16,10 @@
         </header>
         <main>
             <div class="content">
-                <h2>Welcome!</h2>
-                <p>By continuing you agree to our <a href="terms-of-service.html">terms of Service</a> and <a href="privacy-policy.html">privacy policy</a>.</p>
-                <button class="genericBtn" onclick="window.location.replace('http://ads.lciteam.club/club-or-personal-selection.html')"><strong> Ok </strong></button>
+                <h2>Create an Ad!</h2>
+                <div class="creationPanel">
+                    <p>idk</p>
+                </div>
             </div>
         </main>
         <footer>
