--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Spartan Ads</title>
-        <link href="terms-of-service.css" rel="stylesheet" type="text/css">
+        <link href="global.css" rel="stylesheet" type="text/css">
         <link rel="shortcut icon" href="assets/favicon.ico"/>
         <meta charset="UTF-8">
         <meta name="keywords" content="LCHS,LCUSD,iTeam,lchs go,la cañada">
